[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrchain"
version = "0.3.12"
description = "Interface to RChain RNode RPC"
readme = "README.md"
authors = [
    { name = "RChain Cooperative", email = "rchain-makers@rchain.coop" }
]
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
    "ecdsa>=0.18.0",
    "python-bitcoinlib>=0.12.0",
    "cryptography>=41.0.0",
    "eth_hash[pycryptodome]>=0.5.0",
    "pycryptodome>=3.19.0",
    "eth-keyfile>=0.8.0",
    "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/rchain/pyrchain"

[project.scripts]
pyrchain = "rchain.__main__:cli"

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.60.0",
    "mypy>=1.7.0",
    "typing-extensions>=4.8.0",
    "mypy-protobuf>=3.5.0",
    "isort>=5.12.0",
    "pytest>=8.0.0",
    "sphinx>=7.2.0",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["rchain", "rchain.*"]

[tool.setuptools.package-data]
"rchain.vault" = ["*.rho.tpl"]
"rchain.pb" = ["*.pyi"]
"rchain.pb.scalapb" = ["*.pyi"]

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
line_length = 79
multi_line_output = 5
skip = ["rchain/pb", "venv"]

[tool.mypy]
namespace_packages = true
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "rchain.pb.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "rchain.meta"
ignore_errors = true

[[tool.mypy.overrides]]
module = "rchain.interface"
ignore_errors = true

[[tool.mypy.overrides]]
module = "rchain.tests.*"
ignore_errors = true

