[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyf1r3fly"
version = "0.1.0"
description = "Interface to F1R3fly Node RPC"
readme = "README.md"
authors = [
    { name = "F1R3fly Team" } # TODO: add email
]
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
    "ecdsa>=0.18.0",
    "python-bitcoinlib>=0.12.0",
    "cryptography>=41.0.0",
    "eth_hash[pycryptodome]>=0.5.0",
    "pycryptodome>=3.19.0",
    "eth-keyfile>=0.8.0",
    "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/F1R3FLY-io/pyf1r3fly"

[project.scripts]
pyf1r3fly = "f1r3fly.__main__:cli"

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.60.0",
    "mypy>=1.7.0",
    "typing-extensions>=4.8.0",
    "mypy-protobuf>=3.5.0",
    "isort>=5.12.0",
    "pytest>=8.0.0",
    "sphinx>=7.2.0",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["f1r3fly", "f1r3fly.*"]

[tool.setuptools.package-data]
"f1r3fly.vault" = ["*.rho.tpl"]
"f1r3fly.pb" = ["*.pyi"]
"f1r3fly.pb.scalapb" = ["*.pyi"]

[tool.isort]
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
line_length = 79
multi_line_output = 5
skip = ["f1r3fly/pb", "venv"]

[tool.mypy]
namespace_packages = true
ignore_missing_imports = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "f1r3fly.pb.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "f1r3fly.meta"
ignore_errors = true

[[tool.mypy.overrides]]
module = "f1r3fly.interface"
ignore_errors = true

[[tool.mypy.overrides]]
module = "f1r3fly.tests.*"
ignore_errors = true

